--- a/MovieGenreIdentifier_LSTM.ipynb
+++ b/MovieGenreIdentifier_LSTM.ipynb
@@ -212,10 +212,10 @@
         "    self.optimizer = torch.optim.Adam(self.parameters(), lr=learning_rate)\n",
         "\n",
         "  def init_hidden(self,batch_size):\n",
-        "    weight = next(self.parameters()).data\n",
+        "    weight = next(self.parameters()).data #the \"next\" function is used to get the next element from the iterator returned by self.parameters()\n",
         "\n",
         "    hidden = (weight.new(self.number_of_layers, batch_size, self.hidden_size).zero_(),\n",
-        "               weight.new(self.number_of_layers, batch_size, self.hidden_size).zero_())\n",
+        "               weight.new(self.number_of_layers, batch_size, self.hidden_size).zero_()) #\"weight.new()\" creates tensor with the same data type as weight and sets it to zero\n",
         "    return hidden\n",
         "\n",
         "  def forward(self, hidden, input): #This forward method produces outputs for an entire batch of inputs\n",
