--- a/MovieGenreIdentifier_LSTM.ipynb
+++ b/MovieGenreIdentifier_LSTM.ipynb
@@ -214,8 +214,11 @@
         "  def init_hidden(self,batch_size):\n",
         "    weight = next(self.parameters()).data #the \"next\" function is used to get the next element from the iterator returned by self.parameters()\n",
         "\n",
+        "    #Note that this hidden is the initial hidden state, which is why it is set to zero.\n",
+        "    #Moreover, the dimension is (number_of_layers, batch_size, hidden_size) and not (number_of_layers, seq_length, hidden_size)\n",
+        "    #because this initial hidden state is for the first time sequence not for all time sequences.\n",
         "    hidden = (weight.new(self.number_of_layers, batch_size, self.hidden_size).zero_(),\n",
-        "               weight.new(self.number_of_layers, batch_size, self.hidden_size).zero_()) #\"weight.new()\" creates tensor with the same data type as weight and sets it to zero\n",
+        "               weight.new(self.number_of_layers, batch_size, self.hidden_size).zero_()) #\"weight.new()\" creates tensor with the same data type as weight but not the same dimensions\n",
         "    return hidden\n",
         "\n",
         "  def forward(self, hidden, input): #This forward method produces outputs for an entire batch of inputs\n",
@@ -225,7 +228,7 @@
         "    outputs,hn = self.lstm(embedded_input, hidden) #Outputs -> [batch_size, seq_length, hidden_size] hn-> [number_of_layers, batch_size, hidden_size]\n",
         "    outputs = outputs.contiguous().view(-1,self.hidden_size) #Reshapes to [batch_size*sequence_length, hidden_size]\n",
         "\n",
-        "    outputs = self.dropout(outputs) #Randomly converts some elements to 0 (with prob=0.3) and then multiplies all elements with 1/(1-prob)\n",
+        "    outputs = self.dropout(outputs) #Randomly converts some elements to 0 (with prob=0.3) and then multiplies all elements with scaling factor = 1/(1-prob)\n",
         "    outputs = self.fc(outputs) #Linear transformation on outputs/hidden states from all time steps. Outputs shape [batch_size*seq_length, 1]\n",
         "    sig_outputs = self.sigmoid(outputs) #Applies 1/(1+e^-x)\n",
         "\n",
@@ -246,7 +249,7 @@
         "\n",
         "        self.optimizer.zero_grad()\n",
         "        loss.backward()\n",
-        "        nn.utils.clip_grad_norm_(self.parameters(), 5)\n",
+        "        nn.utils.clip_grad_norm_(self.parameters(), 5) #Prevents gradients from becoming too large\n",
         "        self.optimizer.step()\n",
         "\n",
         "        if (epoch+1)%epochs==0:\n",
