--- a/MovieGenreIdentifier_LSTM.ipynb
+++ b/MovieGenreIdentifier_LSTM.ipynb
@@ -81,9 +81,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wQ3phpnB9lXw",
-        "outputId": "1f80eadd-b032-4491-b104-768d767c32b0"
+        "outputId": "6f011b47-c889-4e9a-db36-83fa09f8b50a"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -96,7 +96,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "9f0f97bb"
       },
@@ -126,7 +126,23 @@
       "metadata": {
         "id": "Ua3FmFfEAZIK"
       },
-      "execution_count": null,
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "features = np.array(df_input.iloc[:,0:-5])\n",
+        "action_labels = np.array(df_input[\"action_labels\"])\n",
+        "romance_labels = np.array(df_input[\"romance_labels\"])\n",
+        "drama_labels = np.array(df_input[\"drama_labels\"])\n",
+        "comedy_labels = np.array(df_input[\"comedy_labels\"])\n",
+        "thriller_labels = np.array(df_input[\"thriller_labels\"])"
+      ],
+      "metadata": {
+        "id": "_Eyx1aMt_3pu"
+      },
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -158,16 +174,16 @@
       "metadata": {
         "id": "hsmHyNDjkMm0"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "def data_loader(train_x, train_y, valid_x, valid_y, test_x, test_y):\n",
-        "  train_data = TensorDataset(torch.from_numpy(train_x), torch.from_numpy(train_y))\n",
-        "  valid_data = TensorDataset(torch.from_numpy(valid_x), torch.from_numpy(valid_y))\n",
-        "  test_data = TensorDataset(torch.from_numpy(test_x), torch.from_numpy(test_y))\n",
+        "  train_data = TensorDataset(torch.from_numpy(train_x).float(), torch.from_numpy(train_y).float())\n",
+        "  valid_data = TensorDataset(torch.from_numpy(valid_x).float(), torch.from_numpy(valid_y).float())\n",
+        "  test_data = TensorDataset(torch.from_numpy(test_x).float(), torch.from_numpy(test_y).float())\n",
         "\n",
         "  batch_size = 520\n",
         "\n",
@@ -180,7 +196,7 @@
       "metadata": {
         "id": "vNTKIy21kxuf"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -288,7 +304,7 @@
       "metadata": {
         "id": "MnX14ub6tXra"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -318,7 +334,7 @@
       "metadata": {
         "id": "RJgeKUcSeWd7"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
