--- a/MovieGenreIdentifier_LSTM.ipynb
+++ b/MovieGenreIdentifier_LSTM.ipynb
@@ -79,38 +79,36 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wQ3phpnB9lXw",
-        "outputId": "b6711c77-c531-488e-d707-99137ef45888"
+        "outputId": "42b2d33c-72ca-4ab5-d248-a33bef33ac81"
       },
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Mounted at /content/drive\n"
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ]
         }
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 2,
       "metadata": {
         "id": "9f0f97bb",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4b3ba63a-7ef1-4bdf-cb3d-cbbee350b57f"
+        "outputId": "d543eea5-a4a9-408a-b7dd-47e970e0bedd"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Collecting ray\n",
-            "  Downloading ray-2.6.2-cp310-cp310-manylinux2014_x86_64.whl (56.9 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m56.9/56.9 MB\u001b[0m \u001b[31m8.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hRequirement already satisfied: click>=7.0 in /usr/local/lib/python3.10/dist-packages (from ray) (8.1.6)\n",
+            "Requirement already satisfied: ray in /usr/local/lib/python3.10/dist-packages (2.6.2)\n",
+            "Requirement already satisfied: click>=7.0 in /usr/local/lib/python3.10/dist-packages (from ray) (8.1.6)\n",
             "Requirement already satisfied: filelock in /usr/local/lib/python3.10/dist-packages (from ray) (3.12.2)\n",
             "Requirement already satisfied: jsonschema in /usr/local/lib/python3.10/dist-packages (from ray) (4.19.0)\n",
             "Requirement already satisfied: msgpack<2.0.0,>=1.0.0 in /usr/local/lib/python3.10/dist-packages (from ray) (1.0.5)\n",
@@ -129,9 +127,7 @@
             "Requirement already satisfied: charset-normalizer<4,>=2 in /usr/local/lib/python3.10/dist-packages (from requests->ray) (3.2.0)\n",
             "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.10/dist-packages (from requests->ray) (3.4)\n",
             "Requirement already satisfied: urllib3<3,>=1.21.1 in /usr/local/lib/python3.10/dist-packages (from requests->ray) (2.0.4)\n",
-            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.10/dist-packages (from requests->ray) (2023.7.22)\n",
-            "Installing collected packages: ray\n",
-            "Successfully installed ray-2.6.2\n"
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.10/dist-packages (from requests->ray) (2023.7.22)\n"
           ]
         }
       ],
@@ -165,7 +161,7 @@
       "metadata": {
         "id": "Ua3FmFfEAZIK"
       },
-      "execution_count": 5,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -185,7 +181,7 @@
       "metadata": {
         "id": "_Eyx1aMt_3pu"
       },
-      "execution_count": 6,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -200,12 +196,12 @@
       ],
       "metadata": {
         "id": "VDBDOauTLwq-",
-        "outputId": "820a095b-118b-4544-a60c-56754c3cfa38",
+        "outputId": "54eb9453-e732-4d19-f29e-c107801bc790",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -249,7 +245,7 @@
       "metadata": {
         "id": "hsmHyNDjkMm0"
       },
-      "execution_count": 8,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -269,7 +265,7 @@
       "metadata": {
         "id": "vNTKIy21kxuf"
       },
-      "execution_count": 21,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -380,7 +376,7 @@
       "metadata": {
         "id": "MnX14ub6tXra"
       },
-      "execution_count": 130,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -396,6 +392,7 @@
       "cell_type": "code",
       "source": [
         "def LstmOptimizer(config):\n",
+        "  train_x, train_y, valid_x, valid_y, test_x, test_y = data_splitter(features, all_labels)\n",
         "  train_loader, valid_loader, test_loader = data_loader(train_x, train_y, valid_x, valid_y, test_x, test_y, config[\"batch_size\"])\n",
         "  model = LSTM(vocabulary_length,\n",
         "               config[\"embedding_size\"],\n",
@@ -415,14 +412,14 @@
         "  comedy_score = f1_score(test_y[:,3], predictions[:,3])\n",
         "  thriller_score = f1_score(test_y[:,4], predictions[:,4])\n",
         "\n",
-        "  score = np.mean([action_acc, romance_acc, drama_acc, comedy_acc, thriller_acc])\n",
+        "  score = np.mean([action_score, romance_score, drama_score, comedy_score, thriller_score])\n",
         "\n",
         "  tune.report(score=score)"
       ],
       "metadata": {
         "id": "m39cmfRCHlwe"
       },
-      "execution_count": 188,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -441,26 +438,7 @@
       "metadata": {
         "id": "M1IL9HZuI0h5"
       },
-      "execution_count": 92,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "config = {'epochs': tune.grid_search([25]),\n",
-        "          \"batch_size\":tune.choice([8]),\n",
-        "          \"embedding_size\": tune.choice([64]),\n",
-        "          \"hidden_size\": tune.choice([64]),\n",
-        "          \"num_layers\":tune.grid_search([1]),\n",
-        "          \"lr\": tune.loguniform(0.00001, 0.1),\n",
-        "          \"loss\":tune.grid_search([\"CrossEntropyLoss\"]),\n",
-        "          \"dropout\": tune.randn(0.5,0.3)\n",
-        "          }"
-      ],
-      "metadata": {
-        "id": "3SXJY7q3lnUD"
-      },
-      "execution_count": 189,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -470,19 +448,19 @@
       ],
       "metadata": {
         "id": "wBxzMea5lJma",
-        "outputId": "50b73290-8333-40c5-f57a-600c4d1c86bd",
+        "outputId": "c71362d8-c016-4b8b-ad80-580ab91f0c01",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 196,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "2023-08-14 05:56:50,114\tINFO tune.py:666 -- [output] This will use the new output engine with verbosity 1. To disable the new output and use the legacy output engine, set the environment variable RAY_AIR_NEW_OUTPUT=0. For more information, please see https://github.com/ray-project/ray/issues/36949\n",
-            "2023-08-14 05:56:50,332\tWARNING callback.py:144 -- The TensorboardX logger cannot be instantiated because either TensorboardX or one of it's dependencies is not installed. Please make sure you have the latest version of TensorboardX installed: `pip install -U tensorboardx`\n"
+            "2023-08-14 06:18:54,932\tINFO tune.py:666 -- [output] This will use the new output engine with verbosity 0. To disable the new output and use the legacy output engine, set the environment variable RAY_AIR_NEW_OUTPUT=0. For more information, please see https://github.com/ray-project/ray/issues/36949\n",
+            "2023-08-14 06:18:55,184\tWARNING callback.py:144 -- The TensorboardX logger cannot be instantiated because either TensorboardX or one of it's dependencies is not installed. Please make sure you have the latest version of TensorboardX installed: `pip install -U tensorboardx`\n"
           ]
         },
         {
@@ -490,23 +468,14 @@
           "name": "stdout",
           "text": [
             "+----------------------------------------------------------------------+\n",
-            "| Configuration for experiment     LstmOptimizer_2023-08-14_05-56-50   |\n",
+            "| Configuration for experiment     LstmOptimizer_2023-08-14_06-18-55   |\n",
             "+----------------------------------------------------------------------+\n",
             "| Search algorithm                 BasicVariantGenerator               |\n",
             "| Scheduler                        FIFOScheduler                       |\n",
             "| Number of trials                 1                                   |\n",
             "+----------------------------------------------------------------------+\n",
             "\n",
-            "View detailed results here: /root/ray_results/LstmOptimizer_2023-08-14_05-56-50\n",
-            "\n",
-            "Trial status: 1 PENDING\n",
-            "Current time: 2023-08-14 05:56:50. Total running time: 0s\n",
-            "Logical resource usage: 0/2 CPUs, 0/0 GPUs\n",
-            "+---------------------------------------------------------------------------------------------------------------------------------------------------------------+\n",
-            "| Trial name                  status       batch_size     embedding_size     hidden_size            lr     dropout     epochs     num_layers   loss             |\n",
-            "+---------------------------------------------------------------------------------------------------------------------------------------------------------------+\n",
-            "| LstmOptimizer_5c84d_00000   PENDING               8                 64              64   5.18446e-05    0.498544         25              1   CrossEntropyLoss |\n",
-            "+---------------------------------------------------------------------------------------------------------------------------------------------------------------+\n",
+            "View detailed results here: /root/ray_results/LstmOptimizer_2023-08-14_06-18-55\n",
             "\n"
           ]
         },
@@ -514,26 +483,22 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "2023-08-14 05:57:06,947\tWARNING tune.py:192 -- Stop signal received (e.g. via SIGINT/Ctrl+C), ending Ray Tune run. This will try to checkpoint the experiment state one last time. Press CTRL+C (or send SIGINT/SIGKILL/SIGTERM) to skip. \n",
-            "2023-08-14 05:57:06,963\tWARNING tune.py:1163 -- Experiment has been interrupted, but the most recent state was saved.\n",
-            "Resume experiment with: tune.run(..., resume=True)\n",
-            "2023-08-14 05:57:06,968\tWARNING experiment_analysis.py:916 -- Failed to read the results for 1 trials:\n",
-            "- /root/ray_results/LstmOptimizer_2023-08-14_05-56-50/LstmOptimizer_5c84d_00000_0_batch_size=8,dropout=0.4985,embedding_size=64,epochs=25,hidden_size=64,loss=CrossEntropyLoss,lr=0.0001_2023-08-14_05-56-50\n"
+            "\u001b[2m\u001b[36m(LstmOptimizer pid=32666)\u001b[0m /usr/local/lib/python3.10/dist-packages/torch/nn/modules/rnn.py:71: UserWarning: dropout option adds dropout after all but last recurrent layer, so non-zero dropout expects num_layers greater than 1, but got dropout=0.668231122046 and num_layers=1\n",
+            "\u001b[2m\u001b[36m(LstmOptimizer pid=32666)\u001b[0m   warnings.warn(\"dropout option adds dropout after all but last \"\n"
           ]
         },
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Trial status: 1 PENDING\n",
-            "Current time: 2023-08-14 05:57:06. Total running time: 16s\n",
-            "Logical resource usage: 0/2 CPUs, 0/0 GPUs\n",
-            "+---------------------------------------------------------------------------------------------------------------------------------------------------------------+\n",
-            "| Trial name                  status       batch_size     embedding_size     hidden_size            lr     dropout     epochs     num_layers   loss             |\n",
-            "+---------------------------------------------------------------------------------------------------------------------------------------------------------------+\n",
-            "| LstmOptimizer_5c84d_00000   PENDING               8                 64              64   5.18446e-05    0.498544         25              1   CrossEntropyLoss |\n",
-            "+---------------------------------------------------------------------------------------------------------------------------------------------------------------+\n",
-            "\n"
+            "\u001b[2m\u001b[36m(LstmOptimizer pid=32666)\u001b[0m Final Epoch | step:0 | training loss: 2.9286015033721924 | validation loss: 2.837571620941162\n",
+            "\u001b[2m\u001b[36m(LstmOptimizer pid=32666)\u001b[0m Final Epoch | step:1 | training loss: 2.9705634117126465 | validation loss: 2.8365747928619385\n",
+            "\u001b[2m\u001b[36m(LstmOptimizer pid=32666)\u001b[0m Final Epoch | step:2 | training loss: 2.872987747192383 | validation loss: 2.832285165786743\n",
+            "\u001b[2m\u001b[36m(LstmOptimizer pid=32666)\u001b[0m Final Epoch | step:3 | training loss: 2.877227306365967 | validation loss: 2.8296725749969482\n",
+            "\u001b[2m\u001b[36m(LstmOptimizer pid=32666)\u001b[0m Final Epoch | step:4 | training loss: 2.898346424102783 | validation loss: 2.8219759464263916\n",
+            "\u001b[2m\u001b[36m(LstmOptimizer pid=32666)\u001b[0m Final Epoch | step:5 | training loss: 2.9113876819610596 | validation loss: 2.8264822959899902\n",
+            "\u001b[2m\u001b[36m(LstmOptimizer pid=32666)\u001b[0m Training Complete!\n",
+            "\u001b[2m\u001b[36m(LstmOptimizer pid=32666)\u001b[0m Test loss: 2.864208221435547\n"
           ]
         }
       ]
@@ -559,13 +524,12 @@
     {
       "cell_type": "code",
       "source": [
-        "train_x, train_y, valid_x, valid_y, test_x, test_y = data_splitter(features, all_labels)\n",
         "train_loader, valid_loader, test_loader = data_loader(train_x, train_y, valid_x, valid_y, test_x, test_y, 128)"
       ],
       "metadata": {
         "id": "hyqfM9wCKMbV"
       },
-      "execution_count": 162,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -582,7 +546,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 174,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -615,7 +579,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 175,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -659,7 +623,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 177,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -694,7 +658,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 187,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -723,7 +687,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 107,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -749,7 +713,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 184,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -789,7 +753,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 186,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
