--- a/EDA & Data Preprocessing.ipynb
+++ b/EDA & Data Preprocessing.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1UgMTRP1fbqewjCWHn3-TapSMaGP4CHbI",
-      "authorship_tag": "ABX9TyM7Tie+k9Uo4jY9IeI1V0S5",
+      "authorship_tag": "ABX9TyPkkxq3JwOrvd18fWzlTgBQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,7 +40,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -62,7 +62,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "9f0f97bb"
       },
@@ -90,7 +90,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "2004af9c",
         "colab": {
@@ -119,7 +119,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "9047dc3e",
         "outputId": "a0fffb07-fb07-497c-9ed0-520bb08eecce",
@@ -383,7 +383,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "fa7e57ae",
         "outputId": "2b0263e3-0734-429d-fbdb-828b487d461f",
@@ -655,7 +655,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "5b0a5ebf",
         "outputId": "ebd5a985-9b61-4177-f4bd-54469e449fed",
@@ -943,7 +943,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "32395e2b",
         "outputId": "3caebd01-c9b5-49bd-993d-ffd25037938e",
@@ -1268,7 +1268,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "id": "34ef999f",
         "outputId": "22e955f8-7814-466a-feb8-29f735e679bd",
@@ -1595,7 +1595,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "aa64ebcc",
         "outputId": "a2237d6c-af54-40a9-ca78-e7f10cac989d",
@@ -1934,7 +1934,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "id": "9d2ab6f4",
         "outputId": "a47899f5-3532-4223-84cd-c9a10a3518d5",
@@ -2234,7 +2234,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "a1500aef",
         "outputId": "7f28564b-b8ff-4183-9671-e9c5ea273c83",
@@ -2496,7 +2496,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "id": "7f0401ec",
         "outputId": "c69f6902-0c17-43fd-e48d-b237e4ce8f22",
@@ -2530,13 +2530,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "id": "6a1b9fb3"
       },
       "outputs": [],
       "source": [
-        "stop_words =  stopwords.words('english')\n",
+        "stop_words =  stopwords.words('english') #A list of stop words\n",
         "nlp = spacy.load(\"en_core_web_sm\")\n",
         "\n",
         "def CleanText(text, remove_stop_words = False, lemmatize_words = False):\n",
@@ -2549,7 +2549,7 @@
         "    clean_text = re.sub(\"[^a-zA-Z0-9\\s]\", \" \", clean_text) #Removing punctuation\n",
         "    clean_text = \"\".join([c for c in clean_text if c not in punctuation])\n",
         "    clean_text = re.sub(\"[0-9]\\.?[0-9]?\", \"\", clean_text) #Removing numbers\n",
-        "    clean_text = re.sub(r\"\\b\\w\\b\",  \"\", clean_text) #Removing isolated alphabets (\\b works better than ^ and $)\n",
+        "    clean_text = re.sub(r\"\\b\\w\\b\",  \"\", clean_text) #Removing isolated alphabets\n",
         "    clean_text = re.sub(\"[\\s]+\", \" \", clean_text) #Removing multiple spaces\n",
         "    clean_text = re.sub(\"^[\\s]\",\"\", clean_text) #Removing spaces at the beginning\n",
         "    clean_text = re.sub(\"[\\s]$\",\"\", clean_text) #Removing spaces at the end\n",
@@ -2571,7 +2571,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "id": "a0819349"
       },
@@ -2583,7 +2583,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "id": "a894f3f0"
       },
@@ -2599,7 +2599,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "id": "a0d9f29b",
         "outputId": "26330526-3c8b-4e6f-d414-3f8765d0a0de",
@@ -2978,7 +2978,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "id": "2e8e873d",
         "outputId": "9e422e2a-5550-41b4-e3a6-6fe974cd6d13",
@@ -3017,7 +3017,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "id": "c401e004",
         "outputId": "ac01e5b5-fe81-431d-ea14-3f74917e0a79",
@@ -3058,7 +3058,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "id": "89c2808c",
         "outputId": "f64c5f9f-f37f-40d0-bb4e-35f51cb4964a",
@@ -3099,7 +3099,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
         "id": "76e20f8e",
         "outputId": "ac59bf35-e8c4-45f9-bbec-b4c7555eae7a",
@@ -3140,7 +3140,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "metadata": {
         "id": "4b5d706e",
         "outputId": "5ce88425-0276-4f40-ade5-075559ea0dc8",
@@ -3181,7 +3181,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "metadata": {
         "id": "a0db35b3",
         "outputId": "f82fddd5-e744-4096-ba0e-8afb7fdc7ff6",
@@ -3222,7 +3222,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "metadata": {
         "id": "cf8936ba",
         "outputId": "4a30f7da-5f61-4d0c-82f4-d681e7bd4509",
@@ -3277,7 +3277,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "metadata": {
         "id": "b10c7b76",
         "outputId": "ccb5e175-eaa3-469d-f8a5-0a25a523402a",
@@ -3329,7 +3329,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "metadata": {
         "id": "cd0eeb9e",
         "outputId": "35674432-b82e-4ffb-fea9-5f6d8d1d64f6",
@@ -3355,7 +3355,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "metadata": {
         "id": "5de5ecba",
         "outputId": "58dd8802-3ec9-4218-f8fa-1b352489d8a9",
@@ -3631,7 +3631,7 @@
         "id": "WOFK19Gxosdb",
         "outputId": "0030da56-54c1-4e5a-cb4d-4e65ada2fd24"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4020,7 +4020,7 @@
         "id": "JCKs0eRQz_4R",
         "outputId": "3f660f49-007e-4b3f-ba12-a783ecbd5a57"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4061,7 +4061,7 @@
         },
         "outputId": "2b003af2-198a-43a5-88e2-95869d260c08"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4088,7 +4088,7 @@
       "metadata": {
         "id": "_ZmFsel2juE_"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4110,7 +4110,7 @@
           "height": 279
         }
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4469,7 +4469,7 @@
       "metadata": {
         "id": "ApKyzxyF_ycb"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4480,7 +4480,7 @@
       "metadata": {
         "id": "WKPOFlEmAqvI"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     }
   ]
